// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Paragraph Component does not render when content is empty 1`] = `
<div>
  


</div>
`;

exports[`Paragraph Component renders with optional attributes 1`] = `
<div>
  


  <div
    class="ct-paragraph ct-theme-dark ct-paragraph--large  custom-class"
    data-test="true"
  >
    Sample content
  </div>
</div>
`;

exports[`Paragraph Component renders with required attributes 1`] = `
<div>
  


  <div
    class="ct-paragraph ct-theme-light ct-paragraph--regular  "
  >
    Sample content
  </div>
</div>
`;
